application.properties: add spring.sql.init.mode=always

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ server.port=8080
 #false for production, true for dev
 spring.h2.console.enabled=true
 
+# this is required only for in-memory sql database
 # by default the data source name is uuid
-spring.datasource.generate-unique-name=false
-spring.datasource.name=cards
+#spring.datasource.generate-unique-name=false d
+#spring.datasource.name=cards
+
+# this is required if not using in-memory sql db. It will initialize the schema.sql and data.sql file.
+spring.sql.init.mode=always
